<resources>
    <string name="Effect">Effect</string>
    <string name="Filter">Filter</string>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="Original">Original</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Pencil Photo Sketch</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="card_content_descriptor">card</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">9e18a037-a4cd-409e-82fd-68d3f325311f</string>
    <string name="com_facebook_device_auth_instructions">Visit <b>facebook.com/device</b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact">Contact Us</string>
    <string name="credit_null_warning">Sorry you dont have enough credits to unlock this feature</string>
    <string name="credit_required_warning">Credits are required to unlock this feature.</string>
    <string name="credit_usage">Credits Usage</string>
    <string name="credit_usage_text">Use dropdown list from top right corner to choose HD , FULL HD and other high resolution size, these sizes are depend on actual size of your image and use credits to save and share these high resolution images.</string>
    <string name="credits_purchase_text">Buy</string>
    <string name="custom_rate_dialog_title">Enjoying Pencil Photo Sketch ?</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_web_client_id">291446159400-ahhkfd3oohchq5915kq35qa6o8jb6eft.apps.googleusercontent.com</string>
    <string name="editor_text">Editor</string>
    <string name="effect_not_available">is currently not supported for multiresolution we are working on it and will make it available as soon as possible</string>
    <string name="effect_text">Effects</string>
    <string name="extra_text">Extra</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">162007114469037</string>
    <string name="facebook_like">Like Us</string>
    <string name="fb_login_protocol_scheme">fb162007114469037</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feedback_text">Would you mind giving us some feedback?</string>
    <string name="filter_text">Filters</string>
    <string name="firebase_database_url">https://pencil-sketching.firebaseio.com</string>
    <string name="gallery">Gallery</string>
    <string name="gcm_defaultSenderId">291446159400</string>
    <string name="google_api_key">AIzaSyCAc9nfVK1W9EBt6riJz3rTSrSOMlBUlcw</string>
    <string name="google_app_id">1:291446159400:android:c297afcaf9c80757</string>
    <string name="google_crash_reporting_api_key">AIzaSyCAc9nfVK1W9EBt6riJz3rTSrSOMlBUlcw</string>
    <string name="google_storage_bucket">pencil-sketching.appspot.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="image_path_null_title">Image Path not found</string>
    <string name="image_path_null_warning">Due to lack of image path only regular size will be available. To resolve the issue restart the app and load the image again or move image to other folder.</string>
    <string name="loading_text">Loading...</string>
    <string name="mcv2_back_button_desc">Back</string>
    <string name="mcv2_cc_is_off">Subtitle is off. Click to show it.</string>
    <string name="mcv2_cc_is_on">Subtitle is on. Click to hide it.</string>
    <string name="mcv2_error_dialog_button">OK</string>
    <string name="mcv2_ffwd_button_desc">Go forward by 30 seconds</string>
    <string name="mcv2_full_screen_button_desc">Full screen</string>
    <string name="mcv2_launch_button_desc">Launch Link</string>
    <string name="mcv2_music_artist_unknown_text">Artist unknown</string>
    <string name="mcv2_music_title_unknown_text">Song title unknown</string>
    <string name="mcv2_next_button_desc">Next media</string>
    <string name="no_thanks">No, thanks</string>
    <string name="not">Not, Really</string>
    <string name="ok_sure">Ok, sure</string>
    <string name="rate">Rate Us</string>
    <string name="thanks_text">Thanks for your support!</string>
    <string name="wait_text">Please Wait...</string>
</resources>