<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:id="@+id/screen_layout"
    android:background="#171b1e"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView android:id="@+id/gpuimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_above="@+id/my_recycler_view"
        android:layout_centerInParent="true"/>
    <RelativeLayout android:id="@+id/toggle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/seekbar_view">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/toggle_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:textToggleCenter="@string/Effect"
                app:textToggleLeft="@string/Original"
                app:textToggleRight="@string/Filter"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/seekbar_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/my_recycler_view">
        <include layout="@layout/seekbar_layout"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:background="@color/colorWhite"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>