<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/title"/>
        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:id="@+id/loading_screen"
            android:background="@color/colorWhite"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/splash_layout"
            android:background="@color/colorDarkBlueDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView android:id="@+id/viewicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/view_icon"
                android:layout_centerInParent="true"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_alignParentBottom="true">
                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/preloader"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="89dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="89dp"
                    android:layout_alignParentStart="true"
                    app:indicatorColor="#ff3b3f"
                    app:indicatorName="BallSpinFadeLoaderIndicator"/>
                <TextView
                    android:textSize="28sp"
                    android:textColor="@color/colorWhiteSecond"
                    android:id="@+id/loading_text_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/loading_text"
                    android:layout_toRightOf="@+id/preloader"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <include layout="@layout/drawer_layout"/>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
    <RelativeLayout
        android:id="@+id/rating_view"
        android:background="#ffffff"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:textSize="18sp"
            android:id="@+id/thanks_text"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks_text"
            android:layout_centerInParent="true"/>
        <RelativeLayout android:id="@+id/header"
            android:background="#2196f3"
            android:layout_width="match_parent"
            android:layout_height="65dp">
            <TextView android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feedback"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/header">
            <ImageView android:id="@+id/icon_view"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:src="@drawable/view_icon"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title">
            <TextView
                android:textSize="16sp"
                android:textColor="#171b1e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_text"/>
            <TextView
                android:textSize="17sp"
                android:textColor="#171b1e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/rate"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true">
            <Button
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:id="@+id/submit_button"
                android:background="#2196f3"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/ok_sure"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/cancel_button_rateView"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/ctacolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/no_thanks"/>
                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/ctacolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/close"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>