<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/background" android:background="@drawable/ad_dialog_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp">
    <RelativeLayout android:id="@+id/title" android:layout_width="match_parent" android:layout_height="52dp">
        <TextView android:textSize="24dp" android:textStyle="bold" android:textColor="#878787" android:id="@+id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_centerInParent="true"/>
        <View android:id="@+id/divider" android:background="#878787" android:layout_width="match_parent" android:layout_height="3dp" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/tt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_below="@+id/title" android:layout_centerHorizontal="true">
        <TextView android:textSize="18dp" android:textColor="#878787" android:id="@+id/rating_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/custom_rate_dialog_title" android:layout_centerInParent="true" android:textAlignment="center"
            style="@style/TextAppearance.DeviceDefault.Medium"/>
    </LinearLayout>
    <com.willy.ratingbar.ScaleRatingBar android:id="@+id/simpleRatingBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/tt" android:layout_centerHorizontal="true" app:srb_clearRatingEnabled="true" app:srb_clickable="true" app:srb_drawableEmpty="@drawable/empty" app:srb_drawableFilled="@drawable/filled" app:srb_isIndicator="false" app:srb_minimumStars="0" app:srb_numStars="5" app:srb_rating="0" app:srb_scrollable="true" app:srb_starHeight="25dp" app:srb_starPadding="10dp" app:srb_starWidth="25dp" app:srb_stepSize="1"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/layout" android:padding="8dp" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="8dp" android:weightSum="2" android:layout_weight="1" android:layout_below="@+id/tt">
        <Button android:textSize="18dp" android:textColor="#878787" android:id="@+id/no" android:background="@drawable/native_rating_no" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/not" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textSize="18dp" android:textColor="@color/colorWhite" android:id="@+id/yes" android:background="@drawable/native_rating_yes" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:text="Yes!" android:layout_weight="1" android:textAllCaps="false"/>
    </LinearLayout>
</RelativeLayout>